--- a/login.html
+++ b/login.html
@@ -1,18 +1,15 @@
 ---
 ---
-<div class="row">
-    <div class="col-xs-12">
-        <form role="form">
-            <div class="form-group">
-                <label for="email">Email:</label>
-                <input type="email" class="form-control" id="email">
-            </div>
-            <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" class="form-control" id="password">
-            </div>
-        </form>
-        <a class="btn btn-success" href="/" role="button">Log in</a>
-        <a class="btn btn-warning" href="/register" role="button">Sign up</a>
+<h1>Login</h1>
+<form role="form">
+    <div class="form-group">
+        <label for="email">Email:</label>
+        <input type="email" class="form-control" id="email">
     </div>
-</div>
+    <div class="form-group">
+        <label for="password">Password:</label>
+        <input type="password" class="form-control" id="password">
+    </div>
+</form>
+<a class="btn btn-success" href="/" role="button">Log in</a>
+<a class="btn btn-warning" href="/join" role="button">Join</a>
