Super basic list of links.

--- a/index.html
+++ b/index.html
@@ -2,4 +2,20 @@
 title: Welcome!
 ---
 
-See the <a href="/login">login page.</a>
+<ul>
+    <li>
+        <a href="/login">login</a>
+    </li>
+    <li>
+        <a href="/join">join</a>
+    </li>
+    <li>
+        <a href="/feed">feed</a> (doesn't exist yet)
+    </li>
+    <li>
+        <a href="/report">report</a>
+    </li>
+    <li>
+        <a href="/heatmap">heatmap</a>
+    </li>
+</ul>
