Fix feed image tags.

--- a/feed.html
+++ b/feed.html
@@ -1,7 +1,7 @@
 ---
 ---
 <div class="feed-item panel panel-default">
-    <img src="img/00000000.jpg" class="img-responsive" />
+    <img src="/img/00000000.jpg" class="img-responsive" />
     <div class="panel-body">
         <div class="clearfix">
             <div class="pull-left">
@@ -26,7 +26,7 @@
 </div>
 
 <div class="feed-item panel panel-default">
-    <img src="img/00000001.jpg" class="img-responsive" />
+    <img src="/img/00000001.jpg" class="img-responsive" />
     <div class="panel-body">
         <div class="clearfix">
             <div class="pull-left">
@@ -51,7 +51,7 @@
 </div>
 
 <div class="feed-item panel panel-default">
-    <img src="img/00000002.jpg" class="img-responsive" />
+    <img src="/img/00000002.jpg" class="img-responsive" />
     <div class="panel-body">
         <div class="clearfix">
             <div class="pull-left">
@@ -76,7 +76,7 @@
 </div>
 
 <div class="feed-item panel panel-default">
-    <img src="img/00000003.jpg" class="img-responsive" />
+    <img src="/img/00000003.jpg" class="img-responsive" />
     <div class="panel-body">
         <div class="clearfix">
             <div class="pull-left">
@@ -101,7 +101,7 @@
 </div>
 
 <div class="feed-item panel panel-default">
-    <img src="img/00000004.jpg" class="img-responsive" />
+    <img src="/img/00000004.jpg" class="img-responsive" />
     <div class="panel-body">
         <div class="clearfix">
             <div class="pull-left">
@@ -126,7 +126,7 @@
 </div>
 
 <div class="feed-item panel panel-default">
-    <img src="img/00000005.jpg" class="img-responsive" />
+    <img src="/img/00000005.jpg" class="img-responsive" />
     <div class="panel-body">
         <div class="clearfix">
             <div class="pull-left">
@@ -151,7 +151,7 @@
 </div>
 
 <div class="feed-item panel panel-default">
-    <img src="img/00000006.jpg" class="img-responsive" />
+    <img src="/img/00000006.jpg" class="img-responsive" />
     <div class="panel-body">
         <div class="clearfix">
             <div class="pull-left">
