--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Welcome!
         <a href="/join">join</a>
     </li>
     <li>
-        <a href="/feed">feed</a> (doesn't exist yet)
+        <a href="/feed">feed</a>
     </li>
     <li>
         <a href="/report">report</a>
