Sample feed item, copied from the feed.

--- a/feed.html
+++ b/feed.html
@@ -8,8 +8,8 @@
                 <strong>Uploaded by <a href="#">greenfiend420</a></strong>
             </div>
             <div class="pull-right">
-                <a href="#">
-                    <span class="glyphicon glyphicon-warning-sign text-danger"></span>
+                <a href="/report">                    
+            <span class="glyphicon glyphicon-warning-sign text-danger"></span>
                 </a>
             </div>
         </div>
@@ -33,7 +33,7 @@
                 <strong>Uploaded by <a href="#">greenfiend420</a></strong>
             </div>
             <div class="pull-right">
-                <a href="#">
+                <a href="/report">
                     <span class="glyphicon glyphicon-warning-sign text-danger"></span>
                 </a>
             </div>
@@ -58,7 +58,7 @@
                 <strong>Uploaded by <a href="#">greenfiend420</a></strong>
             </div>
             <div class="pull-right">
-                <a href="#">
+                <a href="/report">
                     <span class="glyphicon glyphicon-warning-sign text-danger"></span>
                 </a>
             </div>
@@ -83,7 +83,7 @@
                 <strong>Uploaded by <a href="#">greenfiend420</a></strong>
             </div>
             <div class="pull-right">
-                <a href="#">
+                <a href="/report">
                     <span class="glyphicon glyphicon-warning-sign text-danger"></span>
                 </a>
             </div>
@@ -108,7 +108,7 @@
                 <strong>Uploaded by <a href="#">greenfiend420</a></strong>
             </div>
             <div class="pull-right">
-                <a href="#">
+                <a href="/report">
                     <span class="glyphicon glyphicon-warning-sign text-danger"></span>
                 </a>
             </div>
@@ -133,7 +133,7 @@
                 <strong>Uploaded by <a href="#">greenfiend420</a></strong>
             </div>
             <div class="pull-right">
-                <a href="#">
+                <a href="/report">
                     <span class="glyphicon glyphicon-warning-sign text-danger"></span>
                 </a>
             </div>
@@ -158,7 +158,7 @@
                 <strong>Uploaded by <a href="#">greenfiend420</a></strong>
             </div>
             <div class="pull-right">
-                <a href="#">
+                <a href="/report">
                     <span class="glyphicon glyphicon-warning-sign text-danger"></span>
                 </a>
             </div>
