--- a/join.html
+++ b/join.html
@@ -3,7 +3,7 @@ title: Join
 ---
 <h1>Join TrashTracker</h1>
 
-<form role="form">
+<form role="form" action="/feed">
     <div class="form-group">
         <label for="fname">First name:</label>
         <input type="text" class="form-control" id="fname">
@@ -24,5 +24,5 @@ title: Join
         <label for="confirmpassword">Confirm password:</label>
         <input type="password" class="form-control" id="confirmpassword">
     </div>
+    <button type="submit" class="btn btn-success">Join</button>
 </form>
-<a class="btn btn-success" href="/" role="button">Join</a>
