Super basic profile, based on wireframe.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@ title: Welcome!
         <a href="/join">join</a>
     </li>
     <li>
+        <a href="/profile">profile</a>
+    </li>
+    <li>
         <a href="/feed">feed</a>
     </li>
     <li>
