--- a/report.html
+++ b/report.html
@@ -1,25 +1,31 @@
 ---
 title: Report Submission
 ---
-<h1>Report Submission</h1>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-xs-12">
+            <h1>Report Submission</h1>
 
-<!-- Include the feed item here. -->
-<div class="panel panel-danger">
-    <div class="panel-heading">
-        <h3 class="panel-title">
-            Submission to report
-        </h3>
-    </div>
-    <div class="panel-body">
-        {% include feedItem.html name="Big bad submission" %}
+            <!-- Include the feed item here. -->
+            <div class="panel panel-danger">
+                <div class="panel-heading">
+                    <h3 class="panel-title">
+                        Submission to report
+                    </h3>
+                </div>
+                <div class="panel-body">
+                    {% include feedItem.html %}
+                </div>
+            </div>
+
+            <form role="form">
+                <div class="form-group">
+                    <label for="reason">Reason for reporting:</label>
+                    <textarea class="form-control" rows="3" id="reason"></textarea>
+                </div>
+            </form>
+            <a class="btn btn-success" href="/feed" role="button">Report</a>
+            <a class="btn btn-danger" href="/feed" role="button">Cancel</a>
+        </div>
     </div>
 </div>
-
-<form role="form">
-    <div class="form-group">
-        <label for="reason">Reason for reporting:</label>
-        <textarea class="form-control" rows="3" id="reason"></textarea>
-    </div>
-</form>
-<a class="btn btn-success" href="/feed" role="button">Report</a>
-<a class="btn btn-danger" href="/feed" role="button">Cancel</a>
