Include small heatmap at the top of the feed.

--- a/feed.html
+++ b/feed.html
@@ -1,5 +1,19 @@
 ---
 ---
+<!-- Heatmap -->
+<div class="feed-item panel panel-default">
+    <div class="panel-heading">
+        <h3 class="panel-title">
+            Heatmap for RIT Campus
+        </h3>
+    </div>
+    <div style="width: 100%; height: 400px;">
+        {% include heatmap.html %}
+    </div>
+</div>
+
+<!-- Posts -->
+
 <div class="feed-item panel panel-default">
     <img src="/img/00000000.jpg" class="img-responsive" />
     <div class="panel-body">
@@ -8,7 +22,7 @@
                 <strong>Uploaded by <a href="#">greenfiend420</a></strong>
             </div>
             <div class="pull-right">
-                <a href="/report">                    
+                <a href="/report">
             <span class="glyphicon glyphicon-warning-sign text-danger"></span>
                 </a>
             </div>
