Make the feed's heatmap match the post style.

--- a/feed.html
+++ b/feed.html
@@ -2,13 +2,11 @@
 ---
 <!-- Heatmap -->
 <div class="feed-item panel panel-default">
-    <div class="panel-heading">
-        <h3 class="panel-title">
-            Heatmap for RIT Campus
-        </h3>
-    </div>
     <div style="width: 100%; height: 400px;">
         {% include heatmap.html %}
+    </div>
+    <div class="panel-body">
+        <strong>Heatmap for RIT Campus</strong>
     </div>
 </div>
 
@@ -19,11 +17,11 @@
     <div class="panel-body">
         <div class="clearfix">
             <div class="pull-left">
-                <strong>Uploaded by <a href="#">greenfiend420</a></strong>
+                <strong>Uploaded by <a href="/profile">greenfiend420</a></strong>
             </div>
             <div class="pull-right">
                 <a href="/report">
-            <span class="glyphicon glyphicon-warning-sign text-danger"></span>
+                    <span class="glyphicon glyphicon-warning-sign text-danger"></span>
                 </a>
             </div>
         </div>
@@ -44,7 +42,7 @@
     <div class="panel-body">
         <div class="clearfix">
             <div class="pull-left">
-                <strong>Uploaded by <a href="#">greenfiend420</a></strong>
+                <strong>Uploaded by <a href="/profile">greenfiend420</a></strong>
             </div>
             <div class="pull-right">
                 <a href="/report">
@@ -69,7 +67,7 @@
     <div class="panel-body">
         <div class="clearfix">
             <div class="pull-left">
-                <strong>Uploaded by <a href="#">greenfiend420</a></strong>
+                <strong>Uploaded by <a href="/profile">greenfiend420</a></strong>
             </div>
             <div class="pull-right">
                 <a href="/report">
@@ -94,7 +92,7 @@
     <div class="panel-body">
         <div class="clearfix">
             <div class="pull-left">
-                <strong>Uploaded by <a href="#">greenfiend420</a></strong>
+                <strong>Uploaded by <a href="/profile">greenfiend420</a></strong>
             </div>
             <div class="pull-right">
                 <a href="/report">
@@ -119,7 +117,7 @@
     <div class="panel-body">
         <div class="clearfix">
             <div class="pull-left">
-                <strong>Uploaded by <a href="#">greenfiend420</a></strong>
+                <strong>Uploaded by <a href="/profile">greenfiend420</a></strong>
             </div>
             <div class="pull-right">
                 <a href="/report">
@@ -144,7 +142,7 @@
     <div class="panel-body">
         <div class="clearfix">
             <div class="pull-left">
-                <strong>Uploaded by <a href="#">greenfiend420</a></strong>
+                <strong>Uploaded by <a href="/profile">greenfiend420</a></strong>
             </div>
             <div class="pull-right">
                 <a href="/report">
@@ -169,7 +167,7 @@
     <div class="panel-body">
         <div class="clearfix">
             <div class="pull-left">
-                <strong>Uploaded by <a href="#">greenfiend420</a></strong>
+                <strong>Uploaded by <a href="/profile">greenfiend420</a></strong>
             </div>
             <div class="pull-right">
                 <a href="/report">
