--- a/profile.html
+++ b/profile.html
@@ -1,34 +1,33 @@
 ---
+title: My Profile
 ---
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-xs-12 col-sm-4">
-            <img src="http://api.randomuser.me/portraits/women/21.jpg" alt="" class="img-circle img-thumbnail img-responsive">
-        </div>
-        <!--/col--> 
-        <div class="col-xs-12 col-sm-8">
-            <h2>Jane Doe</h2>
-            <p>
-                <strong>Score:</strong> 9001
-            </p>
-            <p>
-                <strong>Achievements:</strong> 10 / 100 (10%)
-            </p>
-        </div>
-        <!--/col-->          
+<div class="row">
+    <div class="col-xs-12 col-sm-4">
+        <img src="http://api.randomuser.me/portraits/women/21.jpg" alt="" class="img-circle img-thumbnail img-responsive">
     </div>
+    <!--/col--> 
+    <div class="col-xs-12 col-sm-8">
+        <h2>Jane Doe</h2>
+        <p>
+            <strong>Score:</strong> 9001
+        </p>
+        <p>
+            <strong>Achievements:</strong> 10 / 100 (10%)
+        </p>
+    </div>
+    <!--/col-->          
+</div>
 
-    <div class="row">
-        <div class="col-xs-12">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">
-                        Recent Activity
-                    </h3>
-                </div>
-                <div class="panel-body">
-                    {% include feedItem.html %}
-                </div>
+<div class="row">
+    <div class="col-xs-12">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">
+                    Recent Activity
+                </h3>
+            </div>
+            <div class="panel-body">
+                {% include feedItem.html %}
             </div>
         </div>
     </div>
