--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@ title: Welcome!
 
 <ul>
     <li>
-        <a href="/login">login</a>
+        <a href="/login">Login</a>
     </li>
     <li>
-        <a href="/join">join</a>
+        <a href="/join">Join</a>
     </li>
     <li>
-        <a href="/profile">profile</a>
+        <a href="/profile">Profile</a>
     </li>
     <li>
-        <a href="/feed">feed</a>
+        <a href="/feed">Feed</a>
     </li>
     <li>
-        <a href="/report">report</a>
+        <a href="/report">Report</a>
     </li>
     <li>
-        <a href="/heatmap">heatmap</a>
+        <a href="/heatmap">Heatmap</a>
     </li>
 </ul>
