--- a/join.html
+++ b/join.html
@@ -1,28 +1,32 @@
 ---
 title: Join
 ---
-<h1>Join TrashTracker</h1>
+<div class="row">
+    <div class="col-xs-12">
+        <h1>Join TrashTracker</h1>
 
-<form role="form" action="/feed">
-    <div class="form-group">
-        <label for="fname">First name:</label>
-        <input type="text" class="form-control" id="fname">
+        <form role="form" action="/feed">
+            <div class="form-group">
+                <label for="fname">First name:</label>
+                <input type="text" class="form-control" id="fname">
+            </div>
+            <div class="form-group">
+                <label for="lname">Last name:</label>
+                <input type="text" class="form-control" id="lname">
+            </div>
+            <div class="form-group">
+                <label for="email">Email:</label>
+                <input type="email" class="form-control" id="email">
+            </div>
+            <div class="form-group">
+                <label for="password">Password:</label>
+                <input type="password" class="form-control" id="password">
+            </div>
+            <div class="form-group">
+                <label for="confirmpassword">Confirm password:</label>
+                <input type="password" class="form-control" id="confirmpassword">
+            </div>
+            <button type="submit" class="btn btn-success">Join</button>
+        </form>
     </div>
-    <div class="form-group">
-        <label for="lname">Last name:</label>
-        <input type="text" class="form-control" id="lname">
-    </div>
-    <div class="form-group">
-        <label for="email">Email:</label>
-        <input type="email" class="form-control" id="email">
-    </div>
-    <div class="form-group">
-        <label for="password">Password:</label>
-        <input type="password" class="form-control" id="password">
-    </div>
-    <div class="form-group">
-        <label for="confirmpassword">Confirm password:</label>
-        <input type="password" class="form-control" id="confirmpassword">
-    </div>
-    <button type="submit" class="btn btn-success">Join</button>
-</form>
+</div>
