I hated the example user image. It's so much better now.

--- a/profile.html
+++ b/profile.html
@@ -3,11 +3,11 @@ title: My Profile
 ---
 <div class="row">
     <div class="col-xs-12 col-sm-4">
-        <img src="http://api.randomuser.me/portraits/women/21.jpg" alt="" class="img-circle img-thumbnail img-responsive">
+        <img src="https://secure.gravatar.com/avatar/765a01bc7039f72d5cc93fb0e1a8ae58?s=350" alt="" class="img-circle img-thumbnail img-responsive">
     </div>
     <!--/col--> 
     <div class="col-xs-12 col-sm-8">
-        <h2>Jane Doe</h2>
+        <h2>John Doe</h2>
         <p>
             <strong>Score:</strong> 9001
         </p>
