--- a/submit.html
+++ b/submit.html
@@ -4,29 +4,30 @@ title: New Submission
 
 <h2>Add</h2>
 <div id="lel" style="width: 100%; height: auto; position: relative; padding: 0; margin: 0;">
-    <div id="overlay" style="width: 100%; height: 10%; position: absolute; bottom: 0; left: 0; background: rgba(0,0,0, .5); color: white; text-align: center; padding: 0; margin: 0;">
-    </div>
+    <div id="noCamera" style="width: 100%; height: 100%; position: absolute; bottom: 0; left: 0; background: rgba(0,0,0, .5); color: white; text-align: center; padding: 0; margin: 0; display: hidden;">No camera detected.</div>
+    <div id="overlay" style="width: 100%; height: 10%; position: absolute; bottom: 0; left: 0; background: rgba(0,0,0, .5); color: white; text-align: center; padding: 0; margin: 0;">Tap to Take</div>
     <video autoplay id = "camera" style="width: 100%; padding: 0; margin: 0;"></video>
 </div>
 
 
 <script>
-  var video = document.querySelector('video');
-  var overlay = document.querySelector('#overlay');
-        var localMediaStream = null;
+var video = document.querySelector('video');
+var overlay = document.querySelector('#overlay');
+var localMediaStream = null;
 
-video.addEventListener('click', function(){ 
-	if(video.paused) {
-		video.play();
-		overlay.innerHTML = "Tap to Take";
-	} else {
-		video.pause();
-		overlay.innerHTML = "Tap to Retake";
+function listener(){ 
+  if(video.paused) {
+    video.play();
+    overlay.innerHTML = "Tap to Take";
+  } else {
+    video.pause();
+    overlay.innerHTML = "Tap to Retake";
 
-	}
-}, false);
+  }
+}
 
-    // Not showing vendor prefixes or code that works cross-browser.
+video.addEventListener('click', listener, false);
+
 MediaStreamTrack.getSources(function(sourceInfos){ 
   console.log(sourceInfos);
   var videoSources = [];
@@ -34,25 +35,31 @@ MediaStreamTrack.getSources(function(sourceInfos){
   for (var i = 0; i !== sourceInfos.length; ++i) {
     var sourceInfo = sourceInfos[i];
     if (sourceInfo.kind === "video") {
-	videoSources.push(sourceInfo);
+      videoSources.push(sourceInfo);
     }
     
     if (sourceInfo.facing === "environment") {
-	environmentCamera = sourceInfo;
+      environmentCamera = sourceInfo;
     }
   }
+
   environmentCamera = environmentCamera || videoSources[0];
 
+  if (videoSources.length === 0)
+  {
+    overlay.innerHTML = "No camera detected.";
+    video.removeEventListener('click', listener);
+    document.getElementById("noCamera").style.display = "block";
+  }
 
+  // Not showing vendor prefixes or code that works cross-browser.
   navigator.webkitGetUserMedia({video: { optional: [{sourceId: environmentCamera.id}]}} ,function(stream) {
     console.log(stream);
     localMediaStream = stream;
     video.src = window.URL.createObjectURL(stream);
   }, function(err){
-	console.log(err);
+    console.log(err);
   });
 });
-
-
 
 </script>
