--- a/submit.html
+++ b/submit.html
@@ -2,14 +2,50 @@
 title: New Submission 
 ---
 
-<h2>Add</h2>
-<div id="lel" style="width: 100%; height: auto; position: relative; padding: 0; margin: 0;">
-    <div id="noCamera" style="width: 100%; height: 100%; position: absolute; bottom: 0; left: 0; background: rgba(0,0,0, .5); color: white; text-align: center; padding: 0; margin: 0; display: hidden;">No camera detected.</div>
-    <div id="overlay" style="width: 100%; height: 10%; position: absolute; bottom: 0; left: 0; background: rgba(0,0,0, .5); color: white; text-align: center; padding: 0; margin: 0;">Tap to Take</div>
-    <video autoplay id = "camera" style="width: 100%; padding: 0; margin: 0;"></video>
+<h2>Submit</h2>
+
+<div class="row">
+    <div class="col-xs-12">
+        <p>
+            Tap the viewfinder below to take a picture.
+        </p>
+        <div class="alert alert-danger" role="alert" id="noCamera" style="display: none;">
+            <strong>Uh oh!</strong> No camera detected.
+        </div>
+        <div id="lel" style="width: 100%; height: auto; position: relative; padding: 0; margin: 0;">
+            <div id="noCameraOverlay" style="width: 100%; height: 100%; position: absolute; bottom: 0; left: 0; background: rgba(0,0,0, .5); color: white; text-align: center; padding: 0; margin: 0; display: none;">No camera detected.</div>
+            <div id="overlay" style="width: 100%; height: 10%; position: absolute; bottom: 0; left: 0; background: rgba(0,0,0, .5); color: white; text-align: center; padding: 0; margin: 0;">Tap to Take</div>
+            <video autoplay id="camera" style="width: 100%; padding: 0; margin: 0;"></video>
+        </div>
+    </div>
 </div>
 
+<div class="row">
+    <div class="col-xs-12">
+        <p>
+            Drag the trashcan on the map below to select the trash location.
+        </p>
+        <div class="alert alert-warning" role="alert" id="locationError" style="display: none;">
+            <strong>Uh oh!</strong> We couldn't geolocate you. Please select your location manually below.
+        </div>
+        <div style="width: 100%; height: 600px;">
+            <div id="map" style="height: 100% !important; width: 100% !important;"></div>
+        </div>
+        <form action="/feed">
+            <div class="form-group">
+                <label for="locLat">Latitude:</label>
+                <input type="text" class="form-control" id="locLat">
+            </div>
+            <div class="form-group">
+                <label for="locLng">Longitude:</label>
+                <input type="text" class="form-control" id="locLng">
+            </div>
+            <button type="submit" class="btn btn-success">Submit</button>
+        </form>
+    </div>
+</div>
 
+<!-- Camera scripts -->
 <script>
 var video = document.querySelector('video');
 var overlay = document.querySelector('#overlay');
@@ -22,14 +58,13 @@ function listener(){
   } else {
     video.pause();
     overlay.innerHTML = "Tap to Retake";
-
   }
 }
 
 video.addEventListener('click', listener, false);
 
 MediaStreamTrack.getSources(function(sourceInfos){ 
-  console.log(sourceInfos);
+  //console.log(sourceInfos);
   var videoSources = [];
   var environmentCamera = null;
   for (var i = 0; i !== sourceInfos.length; ++i) {
@@ -45,26 +80,83 @@ MediaStreamTrack.getSources(function(sourceInfos){
 
   environmentCamera = environmentCamera || videoSources[0];
 
-  if (videoSources.length === 0)
+  if (environmentCamera == null)
   {
     overlay.innerHTML = "No camera detected.";
     video.removeEventListener('click', listener);
     document.getElementById("noCamera").style.display = "block";
+    document.getElementById("noCameraOverlay").style.display = "block";
+    document.getElementById("overlay").style.display = "none";
   }
   else
   {
-    // Style doesn't seem to be setting correctly unless I do this.
-    document.getElementById("noCamera").style.display = "hidden";
+    // There is a camera to use.
+
+    // Not showing vendor prefixes or code that works cross-browser.
+    navigator.webkitGetUserMedia({video: { optional: [{sourceId: environmentCamera.id}]}} ,function(stream) {
+      console.log(stream);
+      localMediaStream = stream;
+      video.src = window.URL.createObjectURL(stream);
+    }, function(err){
+      console.log(err);
+    });
   }
-
-  // Not showing vendor prefixes or code that works cross-browser.
-  navigator.webkitGetUserMedia({video: { optional: [{sourceId: environmentCamera.id}]}} ,function(stream) {
-    console.log(stream);
-    localMediaStream = stream;
-    video.src = window.URL.createObjectURL(stream);
-  }, function(err){
-    console.log(err);
-  });
 });
-
 </script>
+
+<!-- Map scripts -->
+<script>
+// Note: This requires that you consent to location sharing when
+// prompted by your browser. If you see the error "The Geolocation service
+// failed.", it means you probably did not give permission for the browser to
+// locate you.
+
+function initMap() {
+  var map = new google.maps.Map(document.getElementById('map'), {
+    center: {lat: 43.0838822, lng: -77.6759403},
+    zoom: 19,
+    mapTypeId: google.maps.MapTypeId.HYBRID,
+    streetViewControl: false,
+    draggable: true
+  });
+
+  // The reported trash location indicator
+  var marker = new google.maps.Marker({
+      position: map.getCenter(),
+      map: map,
+      title: "Trash Spot",
+      icon: "https://rit.pics/favicons/android-chrome-48x48.png",
+      draggable: true
+  });
+
+  google.maps.event.addListener(marker, "dragend", function(event) {
+    //map.setCenter(marker.position);
+    document.getElementById("locLat").value = marker.position.lat();
+    document.getElementById("locLng").value = marker.position.lng();
+  });
+
+  // Try HTML5 geolocation.
+  if (navigator.geolocation) {
+    navigator.geolocation.getCurrentPosition(function(position) {
+      var pos = {
+        lat: position.coords.latitude,
+        lng: position.coords.longitude
+      };
+
+      marker.setPosition(pos);
+      map.setCenter(pos);
+    }, function() {
+      handleLocationError(marker, map.getCenter());
+    });
+  } else {
+    // Browser doesn't support Geolocation
+    handleLocationError(marker, map.getCenter());
+  }
+}
+
+function handleLocationError(marker, pos) {
+  marker.setPosition(pos);
+  document.getElementById("locationError").style.display = "block";
+}
+</script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAs4B2faq7Jq74F5NJfQZFGXkw-_uaRoVc&signed_in=true&callback=initMap" async defer></script>
