--- a/feed.html
+++ b/feed.html
@@ -16,174 +16,32 @@ title: Feed
 <div class="feed-item panel panel-default">
     <img src="/img/00000000.jpg" class="img-responsive" />
     <div class="panel-body">
-        <div class="clearfix">
-            <div class="pull-left">
-                <strong>Uploaded by <a href="/profile">greenfiend420</a></strong>
+        <div class="row">
+            <div class="col-sm-6">
+                <span class="glyphicon glyphicon-user"></span>
+                <a href="/profile">greenfiend420</a>
             </div>
-            <div class="pull-right">
-                <a href="/report">
-                    <span class="glyphicon glyphicon-warning-sign text-danger"></span>
-                </a>
-            </div>
-        </div>
-        <p class="small">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        </p>
-        <div class="small">
-            <span class="glyphicon glyphicon-time"></span>
-            <span class="text-muted">10-29-2015 16:31:52</span>
-            <span class="glyphicon glyphicon-map-marker"></span>
-            <span class="text-muted">43.083203, -77.675612</span>
-        </div>
-    </div>
-</div>
-
-<div class="feed-item panel panel-default">
-    <img src="/img/00000001.jpg" class="img-responsive" />
-    <div class="panel-body">
-        <div class="clearfix">
-            <div class="pull-left">
-                <strong>Uploaded by <a href="/profile">greenfiend420</a></strong>
-            </div>
-            <div class="pull-right">
-                <a href="/report">
-                    <span class="glyphicon glyphicon-warning-sign text-danger"></span>
-                </a>
+            <div class="col-sm-6">
+                <span class="glyphicon glyphicon-time"></span>
+                <span class="small text-muted">10-29-2015 16:31:52</span>
             </div>
         </div>
         <p class="small">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </p>
-        <div class="small">
-            <span class="glyphicon glyphicon-time"></span>
-            <span class="text-muted">10-29-2015 16:31:52</span>
-            <span class="glyphicon glyphicon-map-marker"></span>
-            <span class="text-muted">43.083203, -77.675612</span>
-        </div>
-    </div>
-</div>
-
-<div class="feed-item panel panel-default">
-    <img src="/img/00000002.jpg" class="img-responsive" />
-    <div class="panel-body">
-        <div class="clearfix">
-            <div class="pull-left">
-                <strong>Uploaded by <a href="/profile">greenfiend420</a></strong>
-            </div>
-            <div class="pull-right">
-                <a href="/report">
-                    <span class="glyphicon glyphicon-warning-sign text-danger"></span>
+        <div class="row">
+            <div class="col-xs-6">
+                <a class="btn btn-default btn-sm btn-block" href="#">
+                    <span class="glyphicon glyphicon-map-marker"></span>
+                    Location
                 </a>
             </div>
-        </div>
-        <p class="small">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        </p>
-        <div class="small">
-            <span class="glyphicon glyphicon-time"></span>
-            <span class="text-muted">10-29-2015 16:31:52</span>
-            <span class="glyphicon glyphicon-map-marker"></span>
-            <span class="text-muted">43.083203, -77.675612</span>
-        </div>
-    </div>
-</div>
-
-<div class="feed-item panel panel-default">
-    <img src="/img/00000003.jpg" class="img-responsive" />
-    <div class="panel-body">
-        <div class="clearfix">
-            <div class="pull-left">
-                <strong>Uploaded by <a href="/profile">greenfiend420</a></strong>
-            </div>
-            <div class="pull-right">
-                <a href="/report">
-                    <span class="glyphicon glyphicon-warning-sign text-danger"></span>
+            <div class="col-xs-6">
+                <a class="btn btn-danger btn-sm btn-block" href="/report">
+                    <span class="glyphicon glyphicon-warning-sign"></span>
+                    Report
                 </a>
             </div>
-        </div>
-        <p class="small">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        </p>
-        <div class="small">
-            <span class="glyphicon glyphicon-time"></span>
-            <span class="text-muted">10-29-2015 16:31:52</span>
-            <span class="glyphicon glyphicon-map-marker"></span>
-            <span class="text-muted">43.083203, -77.675612</span>
-        </div>
-    </div>
-</div>
-
-<div class="feed-item panel panel-default">
-    <img src="/img/00000004.jpg" class="img-responsive" />
-    <div class="panel-body">
-        <div class="clearfix">
-            <div class="pull-left">
-                <strong>Uploaded by <a href="/profile">greenfiend420</a></strong>
-            </div>
-            <div class="pull-right">
-                <a href="/report">
-                    <span class="glyphicon glyphicon-warning-sign text-danger"></span>
-                </a>
-            </div>
-        </div>
-        <p class="small">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        </p>
-        <div class="small">
-            <span class="glyphicon glyphicon-time"></span>
-            <span class="text-muted">10-29-2015 16:31:52</span>
-            <span class="glyphicon glyphicon-map-marker"></span>
-            <span class="text-muted">43.083203, -77.675612</span>
-        </div>
-    </div>
-</div>
-
-<div class="feed-item panel panel-default">
-    <img src="/img/00000005.jpg" class="img-responsive" />
-    <div class="panel-body">
-        <div class="clearfix">
-            <div class="pull-left">
-                <strong>Uploaded by <a href="/profile">greenfiend420</a></strong>
-            </div>
-            <div class="pull-right">
-                <a href="/report">
-                    <span class="glyphicon glyphicon-warning-sign text-danger"></span>
-                </a>
-            </div>
-        </div>
-        <p class="small">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        </p>
-        <div class="small">
-            <span class="glyphicon glyphicon-time"></span>
-            <span class="text-muted">10-29-2015 16:31:52</span>
-            <span class="glyphicon glyphicon-map-marker"></span>
-            <span class="text-muted">43.083203, -77.675612</span>
-        </div>
-    </div>
-</div>
-
-<div class="feed-item panel panel-default">
-    <img src="/img/00000006.jpg" class="img-responsive" />
-    <div class="panel-body">
-        <div class="clearfix">
-            <div class="pull-left">
-                <strong>Uploaded by <a href="/profile">greenfiend420</a></strong>
-            </div>
-            <div class="pull-right">
-                <a href="/report">
-                    <span class="glyphicon glyphicon-warning-sign text-danger"></span>
-                </a>
-            </div>
-        </div>
-        <p class="small">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        </p>
-        <div class="small">
-            <span class="glyphicon glyphicon-time"></span>
-            <span class="text-muted">10-29-2015 16:31:52</span>
-            <span class="glyphicon glyphicon-map-marker"></span>
-            <span class="text-muted">43.083203, -77.675612</span>
         </div>
     </div>
 </div>
