--- a/report.html
+++ b/report.html
@@ -13,7 +13,7 @@ title: Report Submission
                 </h3>
             </div>
             <div class="panel-body">
-                {% include feedItem.html %}
+                {% include trashItem.html img="/img/00000006.jpg" user="concernedcitizen51" time="10-30-2015 16:52:08" msg="Who the hell keeps leaving toilets everywhere?" later=true %}
             </div>
         </div>
 
