--- a/profile.html
+++ b/profile.html
@@ -27,7 +27,7 @@ title: My Profile
                 </h3>
             </div>
             <div class="panel-body">
-                {% include feedItem.html %}
+                {% include trashItem.html %}
             </div>
         </div>
     </div>
