--- a/profile.html
+++ b/profile.html
@@ -27,7 +27,9 @@ title: My Profile
                 </h3>
             </div>
             <div class="panel-body">
-                {% include trashItem.html %}
+                {% include trashItem.html img="/img/00000006.jpg" user="concernedcitizen51" time="10-30-2015 16:52:08" msg="Who the hell keeps leaving toilets everywhere?" later=true %}
+
+                {% include trashItem.html img="/img/00000006.jpg" user="concernedcitizen51" time="10-30-2015 16:52:08" msg="Who the hell keeps leaving toilets everywhere?" later=true %}
             </div>
         </div>
     </div>
