--- a/index.html
+++ b/index.html
@@ -1,24 +1,17 @@
 ---
-title: Welcome!
+title: Login
 ---
+<h1>Login</h1>
 
-<ul>
-    <li>
-        <a href="/login">Login</a>
-    </li>
-    <li>
-        <a href="/join">Join</a>
-    </li>
-    <li>
-        <a href="/profile">Profile</a>
-    </li>
-    <li>
-        <a href="/feed">Feed</a>
-    </li>
-    <li>
-        <a href="/report">Report</a>
-    </li>
-    <li>
-        <a href="/heatmap">Heatmap</a>
-    </li>
-</ul>
+<form role="form" action="/feed">
+    <div class="form-group">
+        <label for="email">Email:</label>
+        <input type="email" class="form-control" id="email">
+    </div>
+    <div class="form-group">
+        <label for="password">Password:</label>
+        <input type="password" class="form-control" id="password">
+    </div>
+    <button type="submit" class="btn btn-success">Log in</button>
+    <a class="btn btn-warning" href="/join" role="button">Join TrashTracker</a>
+</form>
