Internally, "feed" is now "list"

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ title: Login
 ---
 <h1>Login</h1>
 
-<form role="form" action="/feed">
+<form role="form" action="/list">
     <div class="form-group">
         <label for="email">Email:</label>
         <input type="email" class="form-control" id="email">
