--- a/pages.html
+++ b/pages.html
@@ -19,7 +19,7 @@ title: List of Pages
         <a href="/profile">Profile</a>
     </li>
     <li>
-        <a href="/feed">Feed</a>
+        <a href="/list">Feed</a>
     </li>
     <li>
         <a href="/report">Report</a>
