--- a/report.html
+++ b/report.html
@@ -23,7 +23,7 @@ title: Report Submission
                 <textarea class="form-control" rows="3" id="reason"></textarea>
             </div>
         </form>
-        <a class="btn btn-success" href="/feed" role="button">Report</a>
-        <a class="btn btn-danger" href="/feed" role="button">Cancel</a>
+        <a class="btn btn-success" href="/list" role="button">Report</a>
+        <a class="btn btn-danger" href="/list" role="button">Cancel</a>
     </div>
 </div>
