--- a/submit.html
+++ b/submit.html
@@ -31,7 +31,7 @@ title: New Submission
         <div style="width: 100%; height: 500px;">
             <div id="map" style="height: 100% !important; width: 100% !important;"></div>
         </div>
-        <form action="/feed">
+        <form action="/list">
             <div class="form-group">
                 <label for="locLat">Latitude:</label>
                 <input type="text" class="form-control" id="locLat">
