--- a/join.html
+++ b/join.html
@@ -5,7 +5,7 @@ title: Join
     <div class="col-xs-12">
         <h1>Join TrashTracker</h1>
 
-        <form role="form" action="/feed">
+        <form role="form" action="/list">
             <div class="form-group">
                 <label for="fname">First name:</label>
                 <input type="text" class="form-control" id="fname">
