--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 ---
 title: Login
 ---
-<h1>Login</h1>
+<div class="page-header">
+    <h1>Login</h1>
+</div>
 
 <form role="form" action="/list">
     <div class="form-group">
