--- a/join.html
+++ b/join.html
@@ -3,7 +3,9 @@ title: Join
 ---
 <div class="row">
     <div class="col-xs-12">
-        <h1>Join TrashTracker</h1>
+        <div class="page-header">
+            <h1>Join TrashTracker</h1>
+        </div>
 
         <form role="form" action="/list">
             <div class="form-group">
