--- a/pages.html
+++ b/pages.html
@@ -1,8 +1,9 @@
 ---
 title: List of Pages
 ---
-
-<h1>List of Pages</h1>
+<div class="page-header">
+    <h1>List of Pages</h1>
+</div>
 
 <div class="alert alert-danger" role="alert">
     <strong>Uh oh!</strong> This is an internal page. You probably aren't supposed to be here.
