--- a/report.html
+++ b/report.html
@@ -3,7 +3,9 @@ title: Report Submission
 ---
 <div class="row">
     <div class="col-xs-12">
-        <h1>Report Submission</h1>
+        <div class="page-header">
+            <h1>Report Submission</h1>
+        </div>
 
         <!-- Include the feed item here. -->
         <div class="panel panel-danger">
