--- a/submit.html
+++ b/submit.html
@@ -1,8 +1,9 @@
 ---
 title: New Submission 
 ---
-
-<h2>Submit</h2>
+<div class="page-header">
+    <h1>Submit</h1>
+</div>
 
 <div class="row">
     <div class="col-xs-12">
