--- a/submit.html
+++ b/submit.html
@@ -41,6 +41,13 @@ title: New Submission
                 <label for="locLng">Longitude:</label>
                 <input type="text" class="form-control" id="locLng">
             </div>
+            <div class="form-group">
+                <label for="notes">Notes:</label>
+                <input type="text" class="form-control" id="notes" placeholder="(Optional)">
+            </div>
+            <div class="checkbox">
+                <label><input type="checkbox"> Flag for later pickup.</label>
+            </div>
             <button type="submit" class="btn btn-success">Submit</button>
         </form>
     </div>
