--- a/submit.html
+++ b/submit.html
@@ -64,6 +64,7 @@ title: New Submission
       localStorage.setItem("postLng", document.getElementById("locLng").value);
       localStorage.setItem("postNotes", document.getElementById("notes").value);
       localStorage.setItem("postLater", document.getElementById("laterPickup").checked);
+      localStorage.setItem("postTime", new Date().toLocaleString());
     }
   }
 </script>
