Hide the trashItem's report button when on the report page.

--- a/report.html
+++ b/report.html
@@ -15,7 +15,7 @@ title: Report Submission
                 </h3>
             </div>
             <div class="panel-body">
-                {% include trashItem.html img="/img/00000006.jpg" user="concernedcitizen51" time="10-30-2015 16:52:08" msg="Who the hell keeps leaving toilets everywhere?" later=true %}
+                {% include trashItem.html img="/img/00000006.jpg" user="concernedcitizen51" time="10-30-2015 16:52:08" msg="Who the hell keeps leaving toilets everywhere?" later=true hideButtons=true %}
             </div>
         </div>
 
