Hide the latitude and longitude fields on the submit page.

--- a/submit.html
+++ b/submit.html
@@ -34,11 +34,11 @@ title: New Submission
             <div id="map" style="height: 100% !important; width: 100% !important;"></div>
         </div>
         <form action="/list">
-            <div class="form-group">
+            <div class="form-group" style="display: none;">
                 <label for="locLat">Latitude:</label>
                 <input type="text" class="form-control" id="locLat">
             </div>
-            <div class="form-group">
+            <div class="form-group" style="display: none;">
                 <label for="locLng">Longitude:</label>
                 <input type="text" class="form-control" id="locLng">
             </div>
