Change heatmap description, per issue #11.

--- a/list.html
+++ b/list.html
@@ -7,7 +7,7 @@ title: Feed
         {% include heatmap.html %}
     </div>
     <div class="panel-body">
-        <strong>Heatmap for RIT Campus</strong>
+        Heatmap of trash reports on RIT Campus
     </div>
 </div>
 
