Update the domain to trash.pics.

--- a/submit.html
+++ b/submit.html
@@ -176,7 +176,7 @@ function initMap() {
       position: map.getCenter(),
       map: map,
       title: "Trash Spot",
-      icon: "https://rit.pics/favicons/android-chrome-48x48.png",
+      icon: "https://trash.pics/favicons/android-chrome-48x48.png",
       draggable: true
   });
 
