New "flag for later pickup" text. Fixes #13.

--- a/submit.html
+++ b/submit.html
@@ -47,7 +47,7 @@ title: New Submission
                 <input type="text" class="form-control" id="notes" placeholder="(Optional)">
             </div>
             <div class="checkbox">
-                <label><input type="checkbox" id="laterPickup"> Flag for later pickup.</label>
+                <label><input type="checkbox" id="laterPickup"> Flag this item for someone else to pick up later.</label>
             </div>
             <button type="submit" class="btn btn-success" onclick="saveAndSubmit()" disabled="disabled" id="submitBtn">Submit</button> <!-- Start disabled -->
         </form>
