Rename to Food from Trash

--- a/join.html
+++ b/join.html
@@ -4,7 +4,7 @@ title: Join
 <div class="row">
     <div class="col-xs-12">
         <div class="page-header">
-            <h1>Join TrashTracker</h1>
+            <h1>Join Food Tracker</h1>
         </div>
 
         <form role="form" action="/list">
