--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@ title: Login
         <input type="password" class="form-control" id="password">
     </div>
     <button type="submit" class="btn btn-success">Log in</button>
-    <a class="btn btn-warning" href="/join" role="button">Join TrashTracker</a>
+    <a class="btn btn-warning" href="/join" role="button">Join Food Tracker</a>
+
 </form>
