--- a/submit.html
+++ b/submit.html
@@ -25,7 +25,7 @@ title: New Submission
 <div class="row">
     <div class="col-xs-12">
         <p>
-            Drag the trashcan on the map below to select the trash location.
+            Drag the fries on the map below to select the free food location.
         </p>
         <div class="alert alert-warning" role="alert" id="locationError" style="display: none;">
             <strong>Uh oh!</strong> We couldn't geolocate you. Please select your location manually below.
@@ -175,8 +175,8 @@ function initMap() {
   var marker = new google.maps.Marker({
       position: map.getCenter(),
       map: map,
-      title: "Trash Spot",
-      icon: "https://trash.pics/favicons/android-chrome-48x48.png",
+      title: "Food Spot",
+      icon: "https://cdn4.iconfinder.com/data/icons/BRILLIANT/food/png/48/french_fries.png",
       draggable: true
   });
 
